# radiance_fields

./: .gitattributes  Cargo.toml  README.md
assets/: render_configuration.toml
src/: benchmark.rs  geometry.rs  graphics.rs  main.rs  radiance.comp  render.rs  render_cpu.rs  render_gpu.rs  spherical.rs
