[package]
name = "light_fields"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.82"
array-init = "2.1.0"
bincode = "1.3.3"
bytemuck = { version = "1.15.0", features = ["extern_crate_alloc", "derive"] }
clap = "4.5.4"
glam = { version = "0.27.0", features = ["serde", "bytemuck"] }
kdam = { version = "0.5.1", features = ["rayon"] }
png = "0.17.13"
rayon = "1.10.0"
serde = { version = "1.0.198", features = ["derive"] }
thiserror = "1.0.58"
tokio = { version = "1.37.0", features = ["full"] }
