[package]
name = "radiance_fields"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
anyhow = "1.0.82"
bincode = "1.3.3"
bytemuck = { version = "1.15.0", features = ["extern_crate_alloc", "derive"] }
clap = { version = "4.5.4", features = ["derive"] }
glam = { version = "0.27.0", features = ["serde", "bytemuck"] }
kdam = { version = "0.5.1", features = ["rayon"] }
png = "0.17.13"
rayon = "1.10.0"
serde = { version = "1.0.198", features = ["derive"] }
thiserror = "1.0.58"
tokio = { version = "1.37.0", features = ["full"] }
wgpu = { version = "0.20.0", features = ["glsl"] }
toml = "0.8.12"
